Added automatisation for schema build & move widgets to their own folder & improved form building to work with schema build

--- a/_includes/form/components/label-i18n.html
+++ b/_includes/form/components/label-i18n.html
@@ -1,4 +1,4 @@
-<label for="{{ include.lang }}{{ include.title }}"
+<label for="{{ include.prepend }}{{ include.lang }}{{ include.title }}"
   {%- if include.required == nil or include.required %} class="required"{% endif -%}
 >{{ site.data.i18n.form[include.id][include.title].label[include.lang][page.lang] }}
 {%- if include.required == nil or include.required %} <strong class="required">({{ site.data.i18n.form.required[page.lang] }})</strong>{% endif %}</label>
