--- a/_includes/form/presets/languages.html
+++ b/_includes/form/presets/languages.html
@@ -1,4 +1,4 @@
-{%- assign title = "Languages" -%}
+{%- assign title = "languages" -%}
 {%- include form/components/title.html id=include.id title=title -%}
 
 <div class="form-group">
