--- a/_includes/form/presets/licenses.html
+++ b/_includes/form/presets/licenses.html
@@ -1,5 +1,5 @@
-{%- assign title = "Licenses" -%}
+{%- assign title = "licenses" -%}
 {%- include form/components/title.html id=include.id title=title -%}
 {%- include form/components/group-i18n-group.html id=include.id title=title group="URL" type="url" -%}
 
-{%- include form/components/group-group.html id=include.id title=title group="SpdxID" -%}
+{%- include form/components/group-group.html id=include.id title=title group="spdxID" -%}
