--- a/_includes/form/presets/orgLevel.html
+++ b/_includes/form/presets/orgLevel.html
@@ -1,4 +1,4 @@
-{%- assign title = "OrgLevel" -%}
+{%- assign title = "orgLevel" -%}
 {%- include form/components/title.html id=include.id title=title -%}
 
 <div class="form-group">
