--- a/_includes/form/presets/selectCode.html
+++ b/_includes/form/presets/selectCode.html
@@ -1,7 +1,7 @@
-{%- assign title = "ProjectName" -%}
+{%- assign title = "projectName" -%}
 <div class="form-group hide"­­>
-  {%- include form/components/label-group.html id=include.id title=title group="Select" -%}
-  <select class="form-control" id="{{ title }}Select" name="{{ title }}Select" disabled >
+  {%- include form/components/label-group.html id=include.id title=title group="select" -%}
+  <select class="form-control" id="{{ title }}select" name="{{ title }}select" disabled >
     <option value="">&nbsp;</option>
   </select>
 </div>
