--- a/_includes/form/presets/status.html
+++ b/_includes/form/presets/status.html
@@ -1,4 +1,4 @@
-{%- assign title = "Status" -%}
+{%- assign title = "status" -%}
 {%- include form/components/title.html id=include.id title=title -%}
 <div class="form-group">
   {%- include form/components/label.html id=include.id title=title required=false -%}
