--- a/_includes/schema/presets/contact.html
+++ b/_includes/schema/presets/contact.html
@@ -1,33 +1,21 @@
+{%- assign title = "contact" -%}
+{%- if include.required == nil or include.required == true -%}
+  {% assign required = true -%}
+{%- else -%}
+  {% assign required = false -%}
+{%- endif -%}
 <li>
   <details open>
-    <summary>contact <span class="bg-primary">{{ site.data.i18n.form.required[page.lang] }}</span> [array]</summary>
-    <p>{{ site.data.i18n.form.presets.Contact.description[page.lang] }}</p>
+    <summary>{{ title }}{% if required %} <span class="bg-primary">{{ site.data.i18n.form.required[page.lang] }}</span>{% endif %} [array]</summary>
+    <p>{{ site.data.i18n.form[include.id][title].title[page.lang] }}</p>
     <ul class="list-unstyled">
-      <li>
-        <details open>
-          <summary>URL [array]</summary>
-          <h5>URL</h5>
-          <p>{{ site.data.i18n.form.presets.Contact.URL.description[page.lang] }}</p>
-          <ul>
-            <li>{{ site.data.i18n.form.url.en[page.lang] }} [string]</li>
-            <li>{{ site.data.i18n.form.url.fr[page.lang] }} [string]</li>
-          </ul>
-        </details>
-      </li>
+      {%- include schema/components/li-i18n-group.html id=include.id title=title group="URL" required=false -%}
+      {%- include schema/components/li-group.html id=include.id title=title group="email" required=required -%}
+      {%- include schema/components/li-group.html id=include.id title=title group="name" required=false -%}
 
-      {% capture labelEmail %}{{ site.data.i18n.form.email[page.lang] }}{% endcapture %}
-      {% capture descriptionEmail %}{{ site.data.i18n.form.presets.Contact.email.description[page.lang] }}{% endcapture %}
-      {% include schema/components/li.html schemaTitle="email" label=labelEmail description=descriptionEmail %}
-
-      {% capture labelName %}{{ site.data.i18n.form.name[page.lang] }}{% endcapture %}
-      {% capture descriptionName %}{{ site.data.i18n.form.presets.Contact.name.description[page.lang] }}{% endcapture %}
-      {% include schema/components/li.html schemaTitle="name" label=labelName description=descriptionName %}
-
-      {% if include.phone == nil or include.phone == true  %}
-        {% capture labelPhone %}{{ site.data.i18n.form.phone[page.lang] }}{% endcapture %}
-        {% capture descriptionPhone %}{{ site.data.i18n.form.presets.Contact.phone.description[page.lang] }}{% endcapture %}
-        {% include schema/components/li.html schemaTitle="phone" label=labelPhone description=descriptionPhone %}
-      {% endif %}
+      {%- if include.phone == nil or include.phone == true  -%}
+        {%- include schema/components/li-group.html id=include.id title=title group="phone" required=false -%}
+      {%- endif -%}
     </ul>
   </details>
 </li>
