--- a/_includes/schema/presets/schemaVersion.html
+++ b/_includes/schema/presets/schemaVersion.html
@@ -1,3 +1,1 @@
-{% capture label %}{{ site.data.i18n.form.presets.SchemaVersion.label[page.lang] }}{% endcapture %}
-{% capture description %}{{ site.data.i18n.form.presets.SchemaVersion.description[page.lang] }}{% endcapture %}
-{% include schema/components/li.html schemaTitle="schemaVersion" label=label description=description %}
+{%- include schema/components/li.html id=include.id title="schemaVersion" -%}
