--- a/_includes/form/presets/adminCode.html
+++ b/_includes/form/presets/adminCode.html
@@ -1,4 +1,4 @@
-{%- assign title = "AdminCode" -%}
+{%- assign title = "adminCode" -%}
 {%- include form/components/title.html id=include.id title=title -%}
 
 <div class="form-group">
