--- a/_includes/form/presets/schemaVersion.html
+++ b/_includes/form/presets/schemaVersion.html
@@ -1,4 +1,4 @@
-{%- assign title = "SchemaVersion" -%}
+{%- assign title = "schemaVersion" -%}
 {%- include form/components/title.html id=include.id title=title -%}
 {%- include form/components/group.html id=include.id title=title value="1.0" readonly=true -%}
 
