--- a/_includes/form/presets/selectStandard.html
+++ b/_includes/form/presets/selectStandard.html
@@ -1,10 +1,10 @@
-{%- assign title = "StandardCode" -%}
+{%- assign title = "standardCode" -%}
 {%- include form/components/title.html id=include.id title=title -%}
 <div class="form-group">
   {%- include form/components/label.html id=include.id title=title -%}
   <div>
     {%- include form/components/input.html name=title type=include.type required=include.required value=include.value readonly=include.readonly rule=include.rule style="display: inline-block;" -%}
-    <select class="form-control" id="{{ title }}Select" name="{{ title }}" style="display: inline-block;">
+    <select class="form-control" id="{{ title }}select" name="{{ title }}select" style="display: inline-block;">
       <option value="">&nbsp;</option>
       {%- for standards in site.data.normes_ouvertes-open_standards -%}
         {%- assign standard = standards[1] -%}
