--- a/_includes/form/presets/tags.html
+++ b/_includes/form/presets/tags.html
@@ -1,4 +1,4 @@
-{%- assign title = "Tags" -%}
+{%- assign title = "tags" -%}
 {%- include form/components/title.html id=include.id title=title -%}
 <div id="tags">
   <div id="tagsEN" class="form-group">
