--- a/_includes/schema/loop.html
+++ b/_includes/schema/loop.html
@@ -1,58 +1,72 @@
+{%- capture id -%}{{ site.data.forms[page.config].id }}{%- endcapture -%}
+{%- assign idPreset='presets' -%}
 <ul class="list-unstyled">
-  {% for formGroup in site.data.forms[page.config].formGroups %}
-    {% if formGroup.preset %}
-      {% case formGroup.preset %}
-        {% when 'adminCode' %}
-          {% include schema/presets/adminCode.html %}
-        {% when 'contact' %}
-          {% include schema/presets/contact.html phone=formGroup.phone %}
-        {% when 'dates' %}
-          {% include schema/presets/dates.html created=formGroup.created started=formGroup.started modified=formGroup.modified metadata=formGroup.metadata %}
-        {% when 'description' %}
-          {% include schema/presets/description.html %}
-        {% when 'languages' %}
-          {% include schema/presets/languages.html %}
-        {% when 'licenses' %}
-          {% include schema/presets/licenses.html %}
-        {% when 'orgLevel' %}
-          {% include schema/presets/orgLevel.html %}
-        {% when 'provinceCode' %}
-          {% include schema/presets/provinceCode.html %}
-        {% when 'schemaVersion' %}
-          {% include schema/presets/schemaVersion.html %}
-        {% when 'status' %}
-          {% include schema/presets/status.html %}
-        {% when 'submitter' %}
-          {% include schema/presets/submitter.html %}
-        {% when 'tags' %}
-          {% include schema/presets/tags.html %}
-        {% when 'selectStandard' %}
-          {% include schema/presets/selectStandard.html %}
-        {% else %}
-          {% if page.lang == 'en' %}
+  {%- for formGroup in site.data.forms[page.config].formGroups -%}
+    {%- if formGroup.preset -%}
+      {%- case formGroup.preset -%}
+        {%- when 'adminCode' -%}
+          {%- include schema/presets/adminCode.html id=idPreset -%}
+        {%- when 'contact' -%}
+          {%- include schema/presets/contact.html id=idPreset phone=formGroup.phone required=formGroup.required -%}
+        {%- when 'dates' -%}
+          {%- include schema/presets/dates.html id=idPreset created=formGroup.created started=formGroup.started modified=formGroup.modified -%}
+        {%- when 'description' -%}
+          {%- include schema/presets/description.html id=idPreset -%}
+        {%- when 'homepageUrl' -%}
+          {%- include schema/presets/homepageUrl.html id=idPreset -%}
+        {%- when 'languages' -%}
+          {%- include schema/presets/languages.html id=idPreset -%}
+        {%- when 'licenses' -%}
+          {%- include schema/presets/licenses.html id=idPreset -%}
+        {%- when 'orgLevel' -%}
+          {%- include schema/presets/orgLevel.html id=idPreset -%}
+        {%- when 'provinceCode' -%}
+          {%- include schema/presets/provinceCode.html id=idPreset -%}
+        {%- when 'relatedCode' -%}
+          {%- include schema/presets/relatedCode.html id=idPreset -%}
+        {%- when 'schemaVersion' -%}
+          {%- include schema/presets/schemaVersion.html id=idPreset -%}
+        {%- when 'status' -%}
+          {%- include schema/presets/status.html id=idPreset -%}
+        {%- when 'submitter' -%}
+          {%- include schema/presets/submitter.html id=idPreset -%}
+        {%- when 'tags' -%}
+          {%- include schema/presets/tags.html id=idPreset -%}
+        {%- when 'selectStandard' -%}
+          {%- include schema/presets/selectStandard.html id=idPreset -%}
+        {%- when 'selectCode' -%}
+          {%- include schema/presets/selectCode.html id=idPreset -%}
+        {%- when 'hr' -%}
+        {%- when 'empty' -%}
+          {% if formGroup.start %}
+            {%- include schema/presets/wrap_start.html id=id title=formGroup.title -%}
+          {% else %}
+            {%- include schema/presets/wrap_end.html -%}
+          {% endif %}
+        {%- else -%}
+          {%- if page.lang == 'en' -%}
             <p>Throw <span style="color: red;">ERROR</span> (<strong>preset {{ formGroup.preset }}</strong> not found).</p>
-          {% else %}
+          {%- else -%}
             <p>Retour <span style="color: red;">ERREUR</span> (<strong>preset {{ formGroup.preset }}</strong> non trouvé).</p>
-          {% endif %}
-      {% endcase %}
-    {% else %}
-      {% capture id %}{{ site.data.forms[page.config].id }}{% endcapture %}
-      {% case formGroup.widget %}
-        {% when 'group' %}
-          {% include schema/group.html id=id title=formGroup.title fields=formGroup.fields required=formGroup.required %}
-        {% when 'select' %}
-          {% include schema/select.html id=id title=formGroup.title required=formGroup.required options=formGroup.options %}
-        {% when 'string' %}
-          {% include schema/string.html id=id title=formGroup.title type=formGroup.type rule=formGroup.rule required=formGroup.required %}
-        {% when 'string-i18n' %}
-          {% include schema/string-i18n.html id=id title=formGroup.title type=formGroup.type rule=formGroup.rule required=formGroup.required %}
-        {% else %}
-          {% if page.lang == 'en' %}
+          {%- endif -%}
+      {%- endcase -%}
+    {%- else -%}
+      {%- case formGroup.widget -%}
+        {%- when 'group' -%}
+          {%- include schema/widgets/group.html id=id title=formGroup.title fields=formGroup.fields required=formGroup.required -%}
+        {%- when 'select' -%}
+          {%- include schema/widgets/select.html id=id title=formGroup.title required=formGroup.required options=formGroup.options -%}
+        {%- when 'string' -%}
+          {%- include schema/widgets/string.html id=id title=formGroup.title type=formGroup.type rule=formGroup.rule required=formGroup.required -%}
+        {%- when 'string-i18n' -%}
+          {%- include schema/widgets/string-i18n.html id=id title=formGroup.title type=formGroup.type rule=formGroup.rule required=formGroup.required prepend=formGroup.prepend -%}
+        {%- else -%}
+          {%- if page.lang == 'en' -%}
             <p>Throw <span style="color: red;">ERROR</span> (<strong>widget {{ formGroup.widget }}</strong> not found).</p>
-          {% else %}
+          {%- else -%}
             <p>Retour <span style="color: red;">ERREUR</span> (<strong>widget {{ formGroup.widget }}</strong> non trouvé).</p>
-          {% endif %}
-      {% endcase %}
-    {% endif %}
-  {% endfor %}
+          {%- endif -%}
+      {%- endcase -%}
+    {%- endif -%}
+  {%- endfor -%}
 </ul>
