--- a/_includes/form/presets/selectCode.html
+++ b/_includes/form/presets/selectCode.html
@@ -1,4 +1,4 @@
-{%- assign title = "projectName" -%}
+{%- assign title = "name" -%}
 <div class="form-group hide"­­>
   {%- include form/components/label-group.html id=include.id title=title group="select" -%}
   <select class="form-control" id="{{ title }}select" name="{{ title }}select" disabled >
