--- a/_includes/form/presets/languages.html
+++ b/_includes/form/presets/languages.html
@@ -24,5 +24,5 @@
       </div>
     {%- endfor -%}
   </div>
-  <button type="button" class="btn btn-primary" onclick = "addMoreLanguages()">{{ site.data.i18n.form.presets.Languages.button[page.lang] }}</button>
+  <button type="button" class="btn btn-primary" onclick = "addMoreLanguages()">{{ site.data.i18n.form.[include.id][title].button[page.lang] }}</button>
 </div>
