Added form and schema specifics for new administration & required js

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -76,13 +76,15 @@
 {%- endif -%}
 {%- if page.ref == "codeForm" -%}
   <script type="text/javascript" src="../assets/js/src/codeForm.js"></script>
-  <script type="text/javascript" src="../assets/js/src/adminForm.js"></script>
+  <script type="text/javascript" src="../assets/js/src/newAdmin.js"></script>
 {%- endif -%}
 {%- if page.ref == "standardsForm" -%}
   <script type="text/javascript" src="../assets/js/src/standardsForm.js"></script>
+  <script type="text/javascript" src="../assets/js/src/newAdmin.js"></script>
 {%- endif -%}
 {%- if page.ref == "ossForm" -%}
   <script type="text/javascript" src="../assets/js/src/ossForm.js"></script>
+  <script type="text/javascript" src="../assets/js/src/newAdmin.js"></script>
 {%- endif -%}
 <script>
   const REPO_NAME = "{{ site.github_repository }}";
