--- a/_includes/form/presets/selectOss.html
+++ b/_includes/form/presets/selectOss.html
@@ -4,10 +4,10 @@
   {%- include form/components/label-group.html id=include.id title=title group=group required=false -%}
   <select class="form-control" id="{{ title }}{{ group }}" name="{{ title }}{{ group }}">
     <option value="">&nbsp;</option>
-    {% for oss in site.data.logiciels_libres-open_source_software %}
-      {% assign software = oss[1] %}
+    {%- for oss in site.data.logiciels_libres-open_source_software -%}
+      {%- assign software = oss[1] -%}
       <option class="additional-option" value="{{ software.name[page.lang] }}">{{ software.name[page.lang] }}</option>
-    {% endfor %}
+    {%- endfor -%}
   </select>
 </div>
 
