Fixing build errors

--- a/_includes/form/presets/selectCode.html
+++ b/_includes/form/presets/selectCode.html
@@ -1,6 +1,6 @@
 {%- assign title = "name" -%}
 {%- assign group = "select" -%}
-<div class="form-group hide"­­>
+<div class="form-group"­­>
   {%- include form/components/label-group.html id=include.id title=title group="select" -%}
   <select class="form-control" id="{{ title }}{{ group }}" name="{{ title }}{{ group }}" disabled>
     <option value="">&nbsp;</option>
